# byon_optimus

./: .dockerignore  .env.example  .gitignore  BYON_EXECUTION_PLAN.json  BYON_PROGRESSION.json  CHANGELOG.md  CLAUDE.md  CLEANUP-CLICK-HERE.bat  CLEANUP.bat  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL-CLICK-HERE.bat  INSTALL.md  LICENSE  README.md  SBOM.json  SECURITY.md  byon-config.ts  cleanup.ps1  docker-compose.dev.yml  docker-compose.yml  install-byon-v2.ps1  project description.txt  start-byon.bat
.github/: PULL_REQUEST_TEMPLATE.md
coding-runs/claude-direct-policy-engine/: CHANGELOG.md  README.md  pyproject.toml
coding-runs/claude-direct-policy-engine/docs/: ARCHITECTURE.md  EXAMPLES.md  LIMITATIONS.md  SECURITY.md
coding-runs/claude-direct-policy-engine/examples/: ci_pipeline.yaml  conditional_deploy.yaml  conditional_pipeline.yaml  failure_and_rollback.yaml  minimal.yaml  production_deploy.yaml  production_pipeline.yaml  simple_pipeline.yaml
coding-runs/claude-direct-policy-engine/src/policy_engine/: __init__.py  audit.py  cli.py  conditions.py  engine.py  loader.py  models.py  permissions.py  plan_renderer.py  plan_validator.py  planner.py  planning.py  policy.py  policy_mode.py  rollback.py  topology.py
coding-runs/claude-direct-policy-engine/tests/: conftest.py  test_audit.py  test_audit_persistence.py  test_conditions.py  test_engine.py  test_engine_conditions.py  test_loader.py  test_permissions.py  test_planner.py  test_planning.py  test_policy_bypass_rejection.py  test_regression_skipped_unblocks_dependents.py  test_skip_propagation_regression.py
(+756 files in other folders)
