[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "policy-gated-workflow-engine"
version = "0.1.0"
description = "A policy-gated workflow engine with audit logging and rollback"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
workflow = "policy_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]